--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,24 +1,31 @@
-[tool.poetry]
+[project]
 name = "psaiops"
 version = "0.3.4"
 description = "Web apps to inspect & engineer NN activations."
-license = ".github/LICENSE.md"
+authors = [{ name = "apehex", email = "17317183+apehex@users.noreply.github.com" }]
 readme = ".github/README.md"
-authors = ["apehex <apehex@protonmail.com>"]
-packages = [{include = "psaiops"}]
+license = "AGPL-3.0"
+license-files = [".github/LICENSE.md"]
+requires-python = ">=3.10, <3.14"
+dependencies = [
+    "accelerate>=1.10",
+    "deformers>=0.0",
+    "gradio>=5.0",
+    "kernels==0.10",
+    "matplotlib>=3.10",
+    "requests>=2.0",
+    "triton==3.4",
+]
 
-[tool.poetry.dependencies]
-python = ">=3.10, <3.14"
-accelerate = ">=1.10"
-deformers = ">=0.0"
-gradio = ">=5.0"
-kernels = "0.10"
-requests = ">=2.0"
-triton = "==3.4"
+[dependency-groups]
+dev = ["pytest"]
 
-[tool.poetry.group.dev.dependencies]
-pytest = "*"
+[tool.hatch.build.targets.sdist]
+include = ["psaiops"]
+
+[tool.hatch.build.targets.wheel]
+include = ["psaiops"]
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
