--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "psaiops"
-version = "0.3.5"
+version = "0.4.0"
 description = "Web apps to inspect & engineer NN activations."
 authors = [{ name = "apehex", email = "17317183+apehex@users.noreply.github.com" }]
 readme = ".github/README.md"
@@ -13,6 +13,7 @@ dependencies = [
     "gradio>=5.0",
     "kernels==0.10",
     "matplotlib>=3.10",
+    "mlable-torch>=0.2",
     "requests>=2.0",
     "triton==3.4",
 ]
